--- a/app/src/main/res/layout/activity_edit_company.xml
+++ b/app/src/main/res/layout/activity_edit_company.xml
@@ -62,20 +62,20 @@
 
     <EditText
         android:id="@+id/editTextCompanyDescription"
-        android:minLines="6"
-        android:lines="8"
-        android:maxLines="10"
-        android:inputType="textMultiLine"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="10dp"
         android:layout_below="@+id/editTextCompanyPhone"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="10dp"
         android:hint="company description"
+        android:inputType="textMultiLine"
+        android:lines="12"
+        android:maxLines="14"
+        android:minLines="10"
+        android:scrollbars="vertical"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile" />
 
@@ -89,7 +89,7 @@
         android:layout_marginRight="25dp"
         android:text="Save"
         android:textAllCaps="false"
-        android:layout_below="@+id/editTextCompanyDescription"
+        android:layout_alignParentBottom="true"
         android:textColor="@color/colorWhite"
         android:background="@drawable/rounded_button_solid1"/>
 
