--- a/app/src/main/res/layout/activity_skills.xml
+++ b/app/src/main/res/layout/activity_skills.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="projects.etrkk5.employeer.EditEmployeeActivity"
-    android:background="@color/colorWhite">
+    tools:context="projects.etrkk5.employeer.SkillsActivity">
 
     <EditText
-        android:id="@+id/editTextEmployeeName"
+        android:id="@+id/editTextSkill1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -17,112 +16,111 @@
         android:layout_marginRight="25dp"
         android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
-        android:hint="name"
+        android:hint="add some skills..."
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextEmployeeSurname"
+        android:id="@+id/editTextSkill2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
-        android:hint="surname"
-        android:layout_below="@+id/editTextEmployeeName"
+        android:hint="add some skills..."
+        android:layout_below="@+id/editTextSkill1"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextEmployeeEmail"
+        android:id="@+id/editTextSkill3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
-        android:hint="email"
-        android:layout_below="@+id/editTextEmployeeSurname"
+        android:hint="add some skills..."
+        android:layout_below="@+id/editTextSkill2"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextEmployeePhone"
+        android:id="@+id/editTextSkill4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
-        android:hint="phone"
-        android:layout_below="@+id/editTextEmployeeEmail"
+        android:hint="add some skills..."
+        android:layout_below="@+id/editTextSkill3"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextEmployeeProfession"
+        android:id="@+id/editTextSkill5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
-        android:hint="profession"
-        android:layout_below="@+id/editTextEmployeePhone"
+        android:hint="add some skills..."
+        android:layout_below="@+id/editTextSkill4"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextEmployeeLocation"
+        android:id="@+id/editTextSkill6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="10dp"
         android:inputType="textPersonName"
-        android:hint="location"
-        android:layout_below="@+id/editTextEmployeeProfession"
+        android:hint="add some skills..."
+        android:layout_below="@+id/editTextSkill5"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
     <EditText
-        android:id="@+id/editTextEmployeeAge"
+        android:id="@+id/editTextSkill7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
         android:inputType="textPersonName"
-        android:hint="age"
-        android:layout_below="@+id/editTextEmployeeLocation"
+        android:hint="add some skills..."
+        android:layout_below="@+id/editTextSkill6"
         android:textColor="@color/colorSoftBlack"
         android:textColorHint="@color/colorTextProfile"/>
 
-    <Button
-        android:id="@+id/buttonSkills"
+    <EditText
+        android:id="@+id/editTextSkill8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/buttonSave"
-        android:background="@drawable/circle"
-        android:drawableTop="@drawable/skill"
-        android:layout_marginLeft="260dp"
-        android:layout_marginRight="10dp"
-        android:text="Add skills"
-        android:textAllCaps="false"/>
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="10dp"
+        android:inputType="textPersonName"
+        android:hint="add some skills..."
+        android:layout_below="@+id/editTextSkill7"
+        android:textColor="@color/colorSoftBlack"
+        android:textColorHint="@color/colorTextProfile"/>
 
     <Button
         android:id="@+id/buttonSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/circle"
+        android:drawableTop="@drawable/save"
         android:layout_margin="10dp"
-        android:layout_marginTop="20dp"
         android:text="Save"
         android:textAllCaps="false"
-        android:layout_alignParentBottom="true"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/rounded_button_solid1"/>
+        android:textColor="@color/colorWhite"/>
 
 </RelativeLayout>
