--- a/app/src/main/res/layout/activity_profile_company.xml
+++ b/app/src/main/res/layout/activity_profile_company.xml
@@ -47,6 +47,29 @@
             android:elevation="4dp"
             android:paddingBottom="24dp">
 
+            <ImageView
+                android:id="@+id/imageViewSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:clickable="true"
+                android:src="@android:drawable/ic_menu_search" />
+
+            <ImageView
+                android:id="@+id/imageViewMessages"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                android:clickable="true"
+                android:src="@drawable/messages" />
+
 
             <ImageView
                 android:id="@+id/imageViewEdit"
@@ -56,9 +79,18 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
+                android:scaleType="center"
                 android:clickable="true"
-
                 android:src="@android:drawable/ic_menu_edit" />
+
+            <ImageView
+                android:id="@+id/imageViewPostAd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignStart="@+id/imageViewSearch"
+                android:clickable="true"
+                android:src="@drawable/findemployee" />
 
             <TextView
                 android:id="@+id/textViewCompanyName"
@@ -68,7 +100,7 @@
                 android:layout_marginTop="70dp"
                 android:text=""
                 android:textColor="#fff"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
