--- a/app/src/main/res/layout/activity_employee_get_ad.xml
+++ b/app/src/main/res/layout/activity_employee_get_ad.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="projects.etrkk5.employeer.SearchActivity"
+    android:orientation="vertical"
     android:background="@color/colorWhite"
-    android:orientation="vertical">
+    tools:context="projects.etrkk5.employeer.EmployeeGetAdActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,7 +21,18 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="80dp"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/colorSoftBlack"/>
+
+        <TextView
+            android:id="@+id/textViewHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorTextProfile"
+            android:text="Suggestions for you"
+            android:layout_below="@+id/editTextSearch"
+            android:layout_centerHorizontal="true"
+            />
 
         <ImageView
             android:id="@+id/imageViewSearch"
